force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/Configuracion_actualizacion_divisas__mdt.object-meta.xml
<CustomObject>
    <description>Metadato que va a tener los datos necesarios para que el actualizador de divisas funcione correctamente</description>
    <label>Configuración actualización divisas</label>
    <pluralLabel>Configuraciones de actualizacion divisas</pluralLabel>
</CustomObject>