force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/Clave_publica_cliente__c.field-meta.xml
<CustomField>
    <fullName>Clave_publica_cliente__c</fullName>
    <description>Clave de consumidor de la aplicación conectada necesaria para que el actualizador de divisas funcione correctamente</description>
    <label>Clave pública cliente</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>