force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/Clave_secreta_cliente__c.field-meta.xml
<CustomField>
    <fullName>Clave_secreta_cliente__c</fullName>
    <description>Clave secreta de consumidor de la aplicación conectada necesaria para que el actualizador de divisas funcione correctamente</description>
    <label>Clave secreta cliente</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>