force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/Contrasena__c.field-meta.xml
<CustomField>
    <fullName>Contrasena__c</fullName>
    <description>Contraseña del usuario (necesaria junto con el nombre de usuario y el token de seguridad)</description>
    <label>Contraseña</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>