force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/DireccionURL__c.field-meta.xml
<CustomField>
    <fullName>DireccionURL__c</fullName>
    <description>URL desde donde se va a aobtener la información para actualizar las divisas</description>
    <label>DireccionURL</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>