force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/DireccionURLTokenAccess__c.field-meta.xml
<CustomField>
    <fullName>DireccionURLTokenAccess__c</fullName>
    <description>La URL a la que se pide el token de acceso a la instancia de Salesforce</description>
    <label>DireccionURLTokenAccess</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>