force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/Token_seguridad__c.field-meta.xml
<CustomField>
    <fullName>Token_seguridad__c</fullName>
    <description>Token de seguridad del usuario (necesario junto al nombre de usuario y la contraseña)</description>
    <label>Token seguridad</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>