force-app/main/default/objects/Configuracion_actualizacion_divisas__mdt/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <description>Nombre de usuario (necesario junto a la contraseña y el token de seguridad)</description>
    <label>Usuario</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>